[gd_scene load_steps=7 format=2]

[ext_resource path="res://asset/map/map.tscn" type="PackedScene" id=1]
[ext_resource path="res://asset/game/game.gd" type="Script" id=2]
[ext_resource path="res://asset/ui/loading/loading.tscn" type="PackedScene" id=3]
[ext_resource path="res://asset/util/mobile_camera.gd" type="Script" id=4]
[ext_resource path="res://asset/game/game_ui/game_ui.tscn" type="PackedScene" id=5]
[ext_resource path="res://asset/ui/waypoint/waypoint.tscn" type="PackedScene" id=9]

[node name="game" type="Node"]
script = ExtResource( 2 )

[node name="map" parent="." instance=ExtResource( 1 )]

[node name="farm_holder" type="Node2D" parent="."]

[node name="waypoint" parent="." instance=ExtResource( 9 )]

[node name="fort_holder" type="Node2D" parent="."]

[node name="env_holder" type="Node2D" parent="."]

[node name="flag_holder" type="Node2D" parent="."]

[node name="cloud_holder" type="Node2D" parent="."]

[node name="bot" type="Node2D" parent="."]

[node name="attack_delay" type="Timer" parent="bot"]
wait_time = 5.0
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
volume_db = 5.0
bus = "sfx"

[node name="music" type="AudioStreamPlayer" parent="."]
volume_db = 5.0
bus = "music"

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )
script = ExtResource( 4 )

[node name="loading" parent="Camera2D" instance=ExtResource( 3 )]

[node name="cloud" type="Node2D" parent="Camera2D"]

[node name="cloud_spawn_point" type="Position2D" parent="Camera2D/cloud"]
position = Vector2( 1807.96, 435.81 )

[node name="cloud_spawn_point2" type="Position2D" parent="Camera2D/cloud"]
position = Vector2( -839.075, 410.354 )

[node name="cloud_spawn_timer" type="Timer" parent="Camera2D/cloud"]
wait_time = 5.0
autostart = true

[node name="game_ui" parent="." instance=ExtResource( 5 )]
[connection signal="on_regions_generated" from="map" to="." method="_on_map_on_regions_generated"]
[connection signal="timeout" from="bot/attack_delay" to="." method="_on_attack_delay_timeout"]
[connection signal="on_camera_moving" from="Camera2D" to="." method="_on_Camera2D_on_camera_moving"]
[connection signal="on_loading_finish" from="Camera2D/loading" to="." method="_on_loading_on_loading_finish"]
[connection signal="timeout" from="Camera2D/cloud/cloud_spawn_timer" to="." method="_on_cloud_spawn_timer_timeout"]
[connection signal="on_all_fort_attack_button_pressed" from="game_ui" to="." method="_on_game_ui_on_all_fort_attack_button_pressed"]
[connection signal="on_any_close_button_press" from="game_ui" to="." method="_on_game_ui_on_any_close_button_press"]
[connection signal="on_build_button_press" from="game_ui" to="." method="_on_game_ui_on_build_button_press"]
[connection signal="on_build_option_button_pressed" from="game_ui" to="." method="_on_game_ui_on_build_option_button_pressed"]
[connection signal="on_cicle_region_button_pressed" from="game_ui" to="." method="_on_game_ui_on_cicle_region_button_pressed"]
[connection signal="on_demolish_button_press" from="game_ui" to="." method="_on_game_ui_on_demolish_button_press"]
[connection signal="on_deselect_button_pressed" from="game_ui" to="." method="_on_game_ui_on_deselect_button_pressed"]
[connection signal="on_fort_info_button_pressed" from="game_ui" to="." method="_on_game_ui_on_fort_info_button_pressed"]
[connection signal="on_troop_recruitment_upgrade_button_press" from="game_ui" to="." method="_on_game_ui_on_troop_recruitment_upgrade_button_press"]
[connection signal="on_troop_traning_progress_button_pressed" from="game_ui" to="." method="_on_game_ui_on_troop_traning_progress_button_pressed"]
